--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title></title>
+    <title>France By Numbers</title>
 
     <link rel="stylesheet" type="text/css" href="/france/static/css/style.css">
 
@@ -13,7 +13,19 @@
   <body>
 
     
-<h1 class="m0 lh1">7:02</h1><p class="m0 lh1">Hours of sleep each night</p>
+<div class="container">
+  <div class="clearfix">
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">7:02</h1><p class="m0 lh1">Hours of sleep each night</p>
+    </div>
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">3.4</h1><p class="m0 lh1">Metro rides per day</p>
+    </div>
+    <div class="col-1-of-3">
+      <h1 class="m0 lh1">142</h1><p class="m0 lh1">Photos taken </p>
+    </div>
+  </div>
+</div>
 
 
   </body>
