add links to bias descriptions

--- a/about/index.html
+++ b/about/index.html
@@ -26,10 +26,10 @@
       <p>
         The data presented in this report was collected using <a href="https://last.fm" class="border-bottom">Last.fm</a>, <a href="https://www.reporter-app.com" class="border-bottom">Reporter</a>, and <a href="https://www.sleepcycle.com" class="border-bottom">Sleep Cycle</a> over the course of two months in Paris. These services were super useful in helping me gain insight into my daily activities while abroad, and I&rsquo;d recommend them all.
       </p>
-      <p>
+      <p id="activity-bias">
         I&rsquo;d also like to discuss some of the possible biases in my data. The most recorded response to &ldquo;What are you doing?&rdquo; was &ldquo;On the computer.&rdquo; I can say from experience that I didn&rsquo;t spend most of my time in France on the computer. However, the likelihood that I would report my activities while simply sitting around was much higher. This, I imagine, is why the frequency of reports for sedentary activities is so high, and why my frequent excursions were represented much less in the data.
       </p>
-      <p>
+      <p id="music-bias">
         Music data is less comprehensive than I would have liked due to Spotify&rsquo;s offline listening mode. This state, which I used whenever I wasn&rsquo;t at home, disables scrobbling to Last.fm. As a result, none of the music I listened to while commuting or traveling around the city was recorded. I&rsquo;d say that about half of my plays went undetected as a result.
       </p>
     </div>
