--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
     <div class="col col-6">
       <h1>About</h1>
       <p>
-        The data presented in this report was collected using <a href="https://last.fm" class="border-bottom">Last.fm</a>, <a href="https://www.reporter-app.com" class="border-bottom">Reporter</a>, and <a href="https://www.sleepcycle.com" class="border-bottom">Sleep Cycle</a> over the course of two months in Paris. These services were super useful in helping me gain insight into my daily activities while abroad, and I&rsquo;d recommend them all.
+        The data presented in this report was collected using <a href="https://last.fm" class="border-bottom">Last.fm</a>, <a href="https://www.reporter-app.com" class="border-bottom">Reporter</a>, and <a href="http://www.sleepcycle.com" class="border-bottom">Sleep Cycle</a> over the course of two months in Paris. These services were super useful in helping me gain insight into my daily activities while abroad, and I&rsquo;d recommend them all.
       </p>
       <p>
         This site makes use of <a href="http://flask.pocoo.org" class="border-bottom">Flask</a>, <a href="http://pythonhosted.org/Frozen-Flask/" class="border-bottom">Frozen Flask</a>, <a href="https://github.com/mher/chartkick.py" class="border-bottom">Chartkick</a>, <a href="http://last.fm" class="border-bottom">Last.fm</a>, and <a href="http://foursquare.com" class="border-bottom">Foursquare</a>, among other services. You can check it out on <a href="https://github.com/sophstad/france" class="border-bottom">GitHub</a>.
