One last fix to about page's return link

--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
       <p>
         Music data is less comprehensive than I would have liked due to Spotify&rsquo;s offline listening mode. This state, which I used whenever I wasn&rsquo;t at home, disables scrobbling to Last.fm. As a result, none of the music I listened to while commuting or traveling around the city was recorded. Unfortunately, I&rsquo;d say that about half of my plays went undetected as a result of this unavoidable setting.
       </p>
-      <p><a href="/france" class="border-bottom">&larrlp; Back to the project</a></p>
+      <p>&larrlp; <a href="/france" class="border-bottom">Back to the project</a></p>
     </div>
   </div>
 </div>
